Melhora documentação do código

--- a/InstaCaptionCreator.ipynb
+++ b/InstaCaptionCreator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5eGtDGdRcLsedt714QgKx",
+      "authorship_tag": "ABX9TyN6mzkaiQUk4gVUNvVdj1CA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,8 @@
       "source": [
         "#@title Obtenção dados do Insta\n",
         "\n",
+        "#@markdown Durante o processo de Login, pode ser que seja nescessário autenticar em 2 fatores. Um input irá aparecer, caso necessite.\n",
+        "\n",
         "# Classe Post com dados relevantes da postagem\n",
         "class Post:\n",
         "    def __init__(self, legenda, qtd_curtidas, qtd_comentarios):\n",
@@ -95,7 +97,8 @@
         "        self.qtd_curtidas = qtd_curtidas\n",
         "        self.qtd_cometarios = qtd_comentarios\n",
         "\n",
-        "# Inicia capturas de dados no Insta\n",
+        "# Inicia login e acesso aos dados no Insta\n",
+        "# !!! Durante o processo de Login, pode ser que seja nescessário autenticar em 2 fatores. Um input irá aparecer, caso necessite. !!!\n",
         "cl = Client()\n",
         "cl.login(insta_user, insta_password)\n",
         "\n",
@@ -103,7 +106,7 @@
         "\n",
         "\n",
         "# Retorna uma Lista com as postagens\n",
-        "#@markdown Defina a quantidade de posts que será usada para treinar.\n",
+        "#@markdown Defina a quantidade de posts que será usada para treinar antes de executar esse trecho.\n",
         "\n",
         "qtd_postagens = 50 #@param {type:\"integer\"}\n",
         "medias = cl.user_medias_v1(user_id,qtd_postagens)\n",
